--- a/publisher/.env
+++ b/publisher/.env
@@ -22,11 +22,11 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=redis-server
+REDIS_HOST=publisher-redis-server
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-SUBSCRIBER_HOST=http://subscriber_app:80
+SUBSCRIBER_HOST=http://subscriber_app:8080
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
