--- a/subscriber/.env
+++ b/subscriber/.env
@@ -22,7 +22,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=redis-server
+REDIS_HOST=subscriber-redis-server
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
